@@ -1,35 +1,47 @@
 /*******************************************************************************
  * Copyright (c) 2021 Eclipse RDF4J contributors.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 
 package org.eclipse.rdf4j.sail.shacl.ast;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import java.util.function.Function;
 
+import org.eclipse.rdf4j.model.Namespace;
 import org.eclipse.rdf4j.model.Resource;
+import org.eclipse.rdf4j.model.Value;
+import org.eclipse.rdf4j.query.BindingSet;
 import org.eclipse.rdf4j.sail.SailConnection;
-import org.eclipse.rdf4j.sail.shacl.SourceConstraintComponent;
+import org.eclipse.rdf4j.sail.shacl.ast.StatementMatcher.Variable;
 import org.eclipse.rdf4j.sail.shacl.ast.constraintcomponents.ConstraintComponent;
 import org.eclipse.rdf4j.sail.shacl.ast.planNodes.EmptyNode;
 import org.eclipse.rdf4j.sail.shacl.ast.planNodes.PlanNode;
 import org.eclipse.rdf4j.sail.shacl.ast.planNodes.Select;
-import org.eclipse.rdf4j.sail.shacl.ast.planNodes.ValidationReportNode;
 import org.eclipse.rdf4j.sail.shacl.ast.planNodes.ValidationTuple;
 import org.eclipse.rdf4j.sail.shacl.results.ValidationResult;
 
 public class ValidationQuery {
 
+	private final Set<Namespace> namespaces = new HashSet<>();
+	private ValidationResultGenerator validationResultGenerator;
 	private String query;
 	private ConstraintComponent.Scope scope;
 	private ConstraintComponent.Scope scope_validationReport;
 
-	private final List<StatementMatcher.Variable> variables;
+	private final List<Variable<Value>> variables;
 
 	private int targetIndex;
 	private int valueIndex;
@@ -40,18 +52,22 @@ public class ValidationQuery {
 	private int targetIndex_validationReport;
 	private int valueIndex_validationReport;
 
-	private SourceConstraintComponent constraintComponent;
-	private SourceConstraintComponent constraintComponent_validationReport;
+	private ConstraintComponent constraintComponent;
+	private ConstraintComponent constraintComponent_validationReport;
 
 	private Severity severity;
 	private Shape shape;
+	private List<Variable<?>> extraVariables = List.of();
 
-	public ValidationQuery(String query, List<StatementMatcher.Variable> targets, StatementMatcher.Variable value,
-			ConstraintComponent.Scope scope, SourceConstraintComponent constraintComponent, Severity severity,
+	public ValidationQuery(Collection<Namespace> namespaces, String query, List<Variable<Value>> targets,
+			Variable<Value> value,
+			ConstraintComponent.Scope scope, ConstraintComponent constraintComponent, Severity severity,
 			Shape shape) {
+
+		this.namespaces.addAll(namespaces);
 		this.query = query;
 
-		List<StatementMatcher.Variable> variables = new ArrayList<>(targets);
+		var variables = new ArrayList<>(targets);
 		if (value != null) {
 			variables.add(value);
 		}
@@ -61,11 +77,13 @@ public class ValidationQuery {
 			if (value != null) {
 				propertyShapeWithValue = true;
 				valueIndex = variables.size() - 1;
-				assert constraintComponent == null || constraintComponent.producesValidationResultValue();
+				assert constraintComponent == null
+						|| constraintComponent.getConstraintComponent().producesValidationResultValue();
 			} else {
 				propertyShapeWithValue = false;
 				valueIndex = variables.size();
-				assert constraintComponent == null || !constraintComponent.producesValidationResultValue();
+				assert constraintComponent == null
+						|| !constraintComponent.getConstraintComponent().alwaysProducesValidationResultValue();
 			}
 		} else {
 			targetIndex = variables.size() - 1;
@@ -76,15 +94,20 @@ public class ValidationQuery {
 		this.constraintComponent = constraintComponent;
 		this.severity = severity;
 		this.shape = shape;
+		this.validationResultGenerator = new ValidationResultGenerator();
+
 	}
 
-	public ValidationQuery(String query, ConstraintComponent.Scope scope, List<StatementMatcher.Variable> variables,
+	public ValidationQuery(Set<Namespace> namespaces, String query, ConstraintComponent.Scope scope,
+			List<Variable<Value>> variables,
 			int targetIndex, int valueIndex) {
+		this.namespaces.addAll(namespaces);
 		this.query = query;
 		this.scope = scope;
 		this.variables = Collections.unmodifiableList(variables);
 		this.targetIndex = targetIndex;
 		this.valueIndex = valueIndex;
+		this.validationResultGenerator = new ValidationResultGenerator();
 	}
 
 	/**
@@ -117,16 +140,22 @@ public class ValidationQuery {
 
 		String unionQuery = "{\n" + a.getQuery() + "\n} UNION {\n" + b.query + "\n}";
 
-		List<StatementMatcher.Variable> variables = a.variables.size() >= b.variables.size() ? a.variables
+		var variables = a.variables.size() >= b.variables.size() ? a.variables
 				: b.variables;
+
+		Set<Namespace> namespaces = new HashSet<>();
+		namespaces.addAll(a.namespaces);
+		namespaces.addAll(b.namespaces);
 
 		if (a.propertyShapeWithValue || a.scope == ConstraintComponent.Scope.nodeShape) {
 			assert a.variables.size() > a.valueIndex;
-			return new ValidationQuery(unionQuery, a.scope, variables.subList(0, a.valueIndex + 1), a.targetIndex,
+			return new ValidationQuery(namespaces, unionQuery, a.scope, variables.subList(0, a.valueIndex + 1),
+					a.targetIndex,
 					a.valueIndex);
 		} else {
 			assert a.variables.size() >= a.valueIndex;
-			return new ValidationQuery(unionQuery, a.scope, a.variables.subList(0, a.valueIndex), a.targetIndex,
+			return new ValidationQuery(namespaces, unionQuery, a.scope, a.variables.subList(0, a.valueIndex),
+					a.targetIndex,
 					a.valueIndex);
 		}
 
@@ -136,10 +165,6 @@ public class ValidationQuery {
 		return query;
 	}
 
-	public void setQuery(String query) {
-		this.query = query;
-	}
-
 	public PlanNode getValidationPlan(SailConnection baseConnection, Resource[] dataGraph,
 			Resource[] shapesGraphs) {
 
@@ -147,41 +172,85 @@ public class ValidationQuery {
 		assert shape != null;
 		assert scope_validationReport != null;
 
-		StringBuilder fullQuery = new StringBuilder();
+		String fullQueryString = getFullQueryString();
 
-		fullQuery.append("select distinct ");
+		Select select = new Select(baseConnection, fullQueryString, bindings -> {
 
-		fullQuery.append("?").append(getTargetVariable(true)).append(" ");
-		if (scope_validationReport == ConstraintComponent.Scope.propertyShape
-				&& propertyShapeWithValue_validationReport) {
-			fullQuery.append("?").append(getValueVariable(true)).append(" ");
-		}
-		fullQuery.append("{\n").append(query).append("\n}");
+			var validationResultFunction = validationResultGenerator.getValidationTupleValidationResultFunction(this,
+					shapesGraphs, bindings);
 
-		Select select = new Select(baseConnection, fullQuery.toString(), bindings -> {
+			ValidationTuple validationTuple;
 
 			if (scope_validationReport == ConstraintComponent.Scope.propertyShape) {
 				if (propertyShapeWithValue_validationReport) {
-					return new ValidationTuple(bindings.getValue(getTargetVariable(true)),
+					validationTuple = new ValidationTuple(bindings.getValue(getTargetVariable(true)),
 							bindings.getValue(getValueVariable(true)),
 							scope_validationReport, true, dataGraph);
 				} else {
-					return new ValidationTuple(bindings.getValue(getTargetVariable(true)),
+					validationTuple = new ValidationTuple(bindings.getValue(getTargetVariable(true)),
 							scope_validationReport, false, dataGraph);
 				}
 
 			} else {
-				return new ValidationTuple(bindings.getValue(getTargetVariable(true)),
+				validationTuple = new ValidationTuple(bindings.getValue(getTargetVariable(true)),
 						scope_validationReport, true, dataGraph);
 			}
 
+			return validationTuple.addValidationResult(validationResultFunction);
+
 		}, dataGraph);
 
-		return new ValidationReportNode(select, t -> {
-			return new ValidationResult(t.getActiveTarget(), t.getValue(), shape,
-					constraintComponent_validationReport, severity, t.getScope(), t.getContexts(), shapesGraphs);
-		});
+		return select;
 
+	}
+
+	public static class ValidationResultGenerator {
+
+		public Function<ValidationTuple, ValidationResult> getValidationTupleValidationResultFunction(
+				ValidationQuery validationQuery, Resource[] shapesGraphs, BindingSet bindings) {
+			return t -> new ValidationResult(t.getActiveTarget(), t.getValue(), validationQuery.shape,
+					validationQuery.constraintComponent_validationReport, validationQuery.severity, t.getScope(),
+					t.getContexts(), shapesGraphs);
+		}
+
+	}
+
+	public void setValidationResultGenerator(List<Variable<?>> extraVariables,
+			ValidationResultGenerator validationResultGenerator) {
+		this.validationResultGenerator = validationResultGenerator;
+		this.extraVariables = extraVariables;
+	}
+
+	private String getFullQueryString() {
+		String extraVariablesString;
+		if (!extraVariables.isEmpty()) {
+			Optional<String> reduce = extraVariables.stream()
+					.map(Variable::asSparqlVariable)
+					.reduce((a, b) -> a + " " + b);
+			if (reduce.isPresent()) {
+				extraVariablesString = reduce.get() + " ";
+			} else {
+				extraVariablesString = "";
+			}
+		} else {
+			extraVariablesString = "";
+		}
+
+		if (scope_validationReport == ConstraintComponent.Scope.propertyShape
+				&& propertyShapeWithValue_validationReport) {
+
+			return ShaclPrefixParser.toSparqlPrefixes(namespaces) + "\nSELECT DISTINCT " +
+					"?" + getTargetVariable(true) + " " +
+					"?" + getValueVariable(true) + " " +
+					extraVariablesString +
+					"WHERE {\n" + query + "\n}";
+
+		} else {
+			return ShaclPrefixParser.toSparqlPrefixes(namespaces) + "\nSELECT DISTINCT " +
+					"?" + getTargetVariable(true) + " " +
+					extraVariablesString +
+					"WHERE {\n" + query + "\n}";
+		}
 	}
 
 	private String getValueVariable(boolean forValidationReport) {
@@ -230,7 +299,7 @@ public class ValidationQuery {
 		targetIndex--;
 	}
 
-	public ValidationQuery withConstraintComponent(SourceConstraintComponent constraintComponent) {
+	public ValidationQuery withConstraintComponent(ConstraintComponent constraintComponent) {
 		this.constraintComponent = constraintComponent;
 		return this;
 	}
@@ -243,22 +312,29 @@ public class ValidationQuery {
 		propertyShapeWithValue_validationReport = propertyShapeWithValue;
 	}
 
+	public Shape getShape() {
+		return shape;
+	}
+
+	public Severity getSeverity() {
+		return severity;
+	}
+
+	public ConstraintComponent getConstraintComponent_validationReport() {
+		return constraintComponent_validationReport;
+	}
+
 	// used for sh:deactivated
 	public static class Deactivated extends ValidationQuery {
 
 		private static final Deactivated instance = new Deactivated();
 
 		private Deactivated() {
-			super("", Collections.emptyList(), null, null, null, null, null);
+			super(List.of(), "", Collections.emptyList(), null, null, null, null, null);
 		}
 
 		public static Deactivated getInstance() {
 			return instance;
-		}
-
-		@Override
-		public void setQuery(String query) {
-			throw new IllegalStateException();
 		}
 
 		@Override
@@ -293,7 +369,7 @@ public class ValidationQuery {
 		}
 
 		@Override
-		public ValidationQuery withConstraintComponent(SourceConstraintComponent constraintComponent) {
+		public ValidationQuery withConstraintComponent(ConstraintComponent constraintComponent) {
 			return this;
 		}
 
